--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -8,3 +8,10 @@ conan_basic_setup()
 
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
+
+set_target_properties(${PROJECT_NAME} 
+    PROPERTIES 
+    	CXX_STANDARD 11
+    	CXX_STANDARD_REQUIRED ON
+    	CXX_EXTENSIONS OFF
+)
